fix dark mode bad error render

--- a/client/index.css
+++ b/client/index.css
@@ -849,6 +849,10 @@ body {
   border-radius: calc(var(--radius) - 2px);
 }
 
+.rounded-sm {
+  border-radius: calc(var(--radius) - 4px);
+}
+
 .border {
   border-width: 1px;
 }
